1、aClass.newInstance()  ----->    aClass.getDeclaredConstructor().newInstance() 2、srcResStream 流关闭和判空 3、代码换行